style.css
body{
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100vh;
}

.grid-container {
    width: 700px ; 
    height: 700px;
    border: 1px solid black;
    display: grid;
    grid-template-columns: repeat(16, 1fr);
    
}
  
  .grid-container div {
    background-color: #fff;
    border: 1px solid #888;
  }

  .controls{
    margin-bottom: 10px;
  }

